Correção de bug de produtos sem centralização, utilizei o text-align center para deixar tudo centralizado

--- a/semana2/correções-de-bugs/index.css
+++ b/semana2/correções-de-bugs/index.css
@@ -106,6 +106,10 @@ table {
     width: 60%;
 }
 
+table td{
+    text-align: center;
+}
+
 td button {
     background-color: #fadf63;
     width: 150px;
